--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <button>Add</button>
       </li>
       <li>
-        <a href="https://www.amazon.co.uk/COSTWAY-Semi-weighted-Electric-Adjustable-Beginners/dp/B0FMJRM72H/ref=sxbs_pa_sp_search_thematic_btf_sspa?cv_ct_cx=piano&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sr=1-4-3b5b3493-51d7-4a29-900f-4d77b489bca4-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWNfYnRm" target="_blank">Piano Keyboard</a>
+        <a href="https://www.amazon.co.uk/Donner-Keyboard-Sensitive-Electric-DP-06/dp/B0BBV48479/ref=sr_1_12?s=musical-instruments&sr=1-12" target="_blank">Piano Keyboard</a>
         <button>Add</button>
       </li>
 	<li>
