--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
         <a href="https://www.amazon.co.uk/FIFINE-Microphone-Streaming-VoiceOver-Monitoring-Black/dp/B0CB68J1D7/ref=sr_1_1_sspa?s=musical-instruments&sr=1-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY" target="_blank">Mic</a>
         <button>Add</button>
       </li>
+	<li>
+        <a href="https://www.amazon.co.uk/Lepro-Generated-Lighting-Segmentable-Assistant/dp/B0CPL1QC7J/ref=sxin_15_pa_sp_search_thematic_sspa?cv_ct_cx=lepro&sbo=9ZOMT9Jm0JH%2Ft%2BWi68iDSA%3D%3D&sr=1-1-76163601-3bc5-4bd6-b454-ded14c50366a-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM" target="_blank">Mic</a>
+        <button>Add</button>
+      </li>
     </ul>
   </main>
 
@@ -209,7 +213,7 @@
       if (diff > 0) {
         el.textContent = `${days}d ${hours}h ${minutes}m ${seconds}s`;
       } else {
-        el.textContent = "Christmas yipee 😉";
+        el.textContent = "Christmas";
       }
     }
 
