--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <button>Add</button>
       </li>
 	<li>
-        <a href="https://www.amazon.co.uk/Lepro-Generated-Lighting-Segmentable-Assistant/dp/B0CPL1QC7J/ref=sxin_15_pa_sp_search_thematic_sspa?cv_ct_cx=lepro&sbo=9ZOMT9Jm0JH%2Ft%2BWi68iDSA%3D%3D&sr=1-1-76163601-3bc5-4bd6-b454-ded14c50366a-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM" target="_blank">Mic</a>
+        <a href="https://www.amazon.co.uk/Lepro-Generated-Lighting-Segmentable-Assistant/dp/B0CPL1QC7J/ref=sxin_15_pa_sp_search_thematic_sspa?cv_ct_cx=lepro&sbo=9ZOMT9Jm0JH%2Ft%2BWi68iDSA%3D%3D&sr=1-1-76163601-3bc5-4bd6-b454-ded14c50366a-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM" target="_blank">Light strip</a>
         <button>Add</button>
       </li>
     </ul>
