--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <button>Add</button>
       </li>
       <li>
-        <a href="https://www.amazon.co.uk/MechLands-QK61-Programmable-Swappable-Mechanical/dp/B0D8VK2JLW/ref=sr_1_6_sspa?sr=8-6-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9tdGY" target="_blank">keyboard</a>
+        <a href="https://www.amazon.co.uk/MechLands-Keyboard-Magnetic-Polling-Hot-Swappable/dp/B0F1285D38/ref=sr_1_8_sspa?sr=8-8-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9tdGY&psc=1" target="_blank">keyboard</a>
         <button>Add</button>
       </li>
       <li>
@@ -222,4 +222,5 @@
   </script>
 </body>
 </html>
+
 
