--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <button>Add</button>
       </li>
       <li>
-        <a href="https://www.amazon.co.uk/Donner-Keyboard-Sensitive-Electric-DP-06/dp/B0BBV48479/ref=sr_1_12?s=musical-instruments&sr=1-12" target="_blank">Piano Keyboard</a>
+        <a href="https://www.amazon.co.uk/Donner-Keyboard-Weighted-Beginner-DEP-20/dp/B07X9SD5JR?ref_=ast_sto_dp" target="_blank">Piano Keyboard</a>
         <button>Add</button>
       </li>
 	<li>
@@ -222,5 +222,6 @@
   </script>
 </body>
 </html>
+
 
 
