--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div id="countdown"></div>
   </header>
 
-  <button id="deskBtn" onclick="window.open('desk.html', '_blank')">🛠 Desk Build</button>
+  <button id="deskBtn" onclick="window.open('Desk.html', '_blank')">🛠 Desk Build</button>
 
   <main>
     <h2>list</h2>
@@ -157,15 +157,7 @@
         <button>Add</button>
       </li>
       <li>
-        <a href="https://www.amazon.co.uk/MechLands-Keyboard-Magnetic-Polling-Hot-Swappable/dp/B0F1285D38/ref=sr_1_8_sspa?sr=8-8-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9tdGY&psc=1" target="_blank">keyboard</a>
-        <button>Add</button>
-      </li>
-      <li>
         <a href="https://www.amazon.co.uk/ProtoArc-EC100-Ergonomic-Office-Chair/dp/B0DRY26DQK/ref=sxin_15_pa_sp_search_thematic_sspa?cv_ct_cx=ergonomic%2Bchair&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sr=1-3-ad3222ed-9545-4dc8-8dd8-6b2cb5278509-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM" target="_blank">comfy chair</a>
-        <button>Add</button>
-      </li>
-      <li>
-        <a href="https://www.amazon.co.uk/Linsoul-KZ-ZS10-Earphones-Detachable-Black/dp/B09DK2N5G3/ref=sr_1_3_sspa?sr=8-3-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY" target="_blank">Iems</a>
         <button>Add</button>
       </li>
       <li>
@@ -186,15 +178,19 @@
         <button>Add</button>
       </li>
 	<li>
-        <a href="https://www.amazon.co.uk/FIFINE-Microphone-Streaming-VoiceOver-Monitoring-Black/dp/B0CB68J1D7/ref=sr_1_1_sspa?s=musical-instruments&sr=1-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY" target="_blank">Mic</a>
-        <button>Add</button>
-      </li>
-	<li>
         <a href="https://www.amazon.co.uk/Lepro-Generated-Lighting-Segmentable-Assistant/dp/B0CPL1QC7J/ref=sxin_15_pa_sp_search_thematic_sspa?cv_ct_cx=lepro&sbo=9ZOMT9Jm0JH%2Ft%2BWi68iDSA%3D%3D&sr=1-1-76163601-3bc5-4bd6-b454-ded14c50366a-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM" target="_blank">Light strip</a>
         <button>Add</button>
       </li>
 	<li>
         <a href="https://www.amazon.co.uk/Gugxiom-Customizable-Graffiti-Programmable-Cyberpunk/dp/B0DXDRNYDX/ref=sr_1_6?sr=8-6" target="_blank">Led pixel art</a>
+        <button>Add</button>
+      </li>
+	<li>
+        <a href="https://www.amazon.co.uk/Suptek-Single-Monitor-Adjustable-Spring/dp/B0833NQ8CR/ref=sr_1_3_sspa?sr=8-3-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY" target="_blank">Led pixel art</a>
+        <button>Add</button>
+      </li>
+	<li>
+        <a href="https://www.amazon.co.uk/AOC-24G15N-Adaptive-1920x1080-DisplayPort/dp/B0CXY2RZK7/ref=sr_1_4?sr=8-4" target="_blank">Led pixel art</a>
         <button>Add</button>
       </li>
     </ul>
@@ -226,6 +222,7 @@
   </script>
 </body>
 </html>
+
 
 
 
