--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
         <button>Add</button>
       </li>
 	<li>
-        <a href="https://www.amazon.co.uk/Suptek-Single-Monitor-Adjustable-Spring/dp/B0833NQ8CR/ref=sr_1_3_sspa?sr=8-3-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY" target="_blank">Led pixel art</a>
+        <a href="https://www.amazon.co.uk/Suptek-Single-Monitor-Adjustable-Spring/dp/B0833NQ8CR/ref=sr_1_3_sspa?sr=8-3-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY" target="_blank">Monitor arm</a>
         <button>Add</button>
       </li>
 	<li>
-        <a href="https://www.amazon.co.uk/AOC-24G15N-Adaptive-1920x1080-DisplayPort/dp/B0CXY2RZK7/ref=sr_1_4?sr=8-4" target="_blank">Led pixel art</a>
+        <a href="https://www.amazon.co.uk/AOC-24G15N-Adaptive-1920x1080-DisplayPort/dp/B0CXY2RZK7/ref=sr_1_4?sr=8-4" target="_blank">2nd Monitor</a>
         <button>Add</button>
       </li>
     </ul>
@@ -222,6 +222,7 @@
   </script>
 </body>
 </html>
+
 
 
 
