--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
         <a href="https://mykeybrd.com/products/cloud-black-deskmat-1" target="_blank">Mousepad</a>
         <button>Add</button>
       </li>
+		<li>
+        <a href="https://wooting.io/configurator/wooting-60he?product=plus&model=ANSI&lang=United+States&keycaps=none&quantity=1" target="_blank">REALLY good keyboard</a>
+        <button>Add</button>
+      </li>
       <li>
         <a href="https://www.amazon.co.uk/ProtoArc-EC100-Ergonomic-Office-Chair/dp/B0DRY26DQK/ref=sxin_15_pa_sp_search_thematic_sspa?cv_ct_cx=ergonomic%2Bchair&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sr=1-3-ad3222ed-9545-4dc8-8dd8-6b2cb5278509-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM" target="_blank">comfy chair</a>
         <button>Add</button>
@@ -222,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
